objects/CSS_WS_Other_Claimable__c.object
<CustomObject>
    <fields>
        <fullName>CSS_WS_Claimable__c</fullName>
        <label>Other Claimable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Antifreeze/Coolant</fullName>
                </value>
                <value>
                    <fullName>Belt</fullName>
                </value>
                <value>
                    <fullName>Coolant Filter</fullName>
                </value>
                <value>
                    <fullName>Crankcase Breather Element</fullName>
                </value>
                <value>
                    <fullName>DCA</fullName>
                </value>
                <value>
                    <fullName>Fuel Filter</fullName>
                </value>
                <value>
                    <fullName>Oil</fullName>
                </value>
                <value>
                    <fullName>Oil Filter</fullName>
                </value>
                <value>
                    <fullName>Replacement Engine</fullName>
                </value>
                <value>
                    <fullName>Ties</fullName>
                </value>
                <value>
                    <fullName>Unlisted (Add Description)</fullName>
                </value>
                <value>
                    <fullName>Unlisted 2 (Add Description)</fullName>
                </value>
                <value>
                    <fullName>Unlisted 3 (Add Description)</fullName>
                </value>
                <value>
                    <fullName>Unlisted 4 (Add Description)</fullName>
                </value>
                <value>
                    <fullName>Unlisted 5 (Add Description)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Claimed_Reason__c</fullName>
        <label>Claimed Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Requested_Amount__c</fullName>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Warranty__c</fullName>
        <label>CSS_WS_Warranty</label>
        <referenceTo>CSS_WS_Warranty__c</referenceTo>
        <relationshipName>CSS_WS_Other_Claimables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CSS WS Other Claimable</label>
    <nameField>
        <label>SF Claimable ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS WS Other Claimables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>